CSS: z-index fix

--- a/www/css/style.less
+++ b/www/css/style.less
@@ -388,7 +388,7 @@ body {
 		bottom: 120px;
 		left: 40px;
 
-		z-index: 50;
+		z-index: 60;
 
 		button {
 			display: block;
@@ -495,8 +495,6 @@ body {
 
 			width: 100%;
 			height: 100%;
-
-			z-index: 30;
 		}
 
 		.grid-title {
@@ -515,8 +513,6 @@ body {
 			line-height: 2.8rem;
 			text-align: center;
 
-			z-index: 20;
-
 			opacity: 0;
 
 			pointer-events: none;
@@ -529,7 +525,7 @@ body {
 		&:hover {
 			box-shadow: 0 2px 45px 15px rgba(0, 0, 0, 0.6);
 
-			z-index: 30;
+			z-index: 50;
 
 			.transform(scale(1.1));
 
